# chat-cli

./: .env.example  Cargo.toml  FUNTION-TOOLS-TEST.md  README.md  TODO.md  system_prompt.md  test.http  test.md
examples/: mock_llm_example.rs  simple_mock_test.rs  trait_usage.rs
src/: chat_client.rs  function_calling.rs  gemini.rs  input_manager.rs  lib.rs  loading_animation.rs  main.rs  mcp_client.rs  mock_llm.rs  openai.rs  prompt_input.rs  response_card.rs  ui.rs
src/tools/: glob.rs  google_web_search.rs  list_directory.rs  mod.rs  read_file.rs  read_many_files.rs  replace.rs  run_shell_command.rs  save_memory.rs  search_file_content.rs  web_fetch.rs  write_file.rs
src/ui/: input_box.rs  mod.rs
