[package]
name = "chat-cli"
version = "0.1.0"
edition = "2021"
default-run = "chat-cli"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
crossterm = "0.27"